Cambio en .env.production

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 FRONTEND_URL=control-personal-sucesore.vercel.app  # URL de tu frontend en producción
-DATA_DIR=//192.168.0.160:8000
+DATA_DIR=//192.168.0.251/artemis/Control de Calidad/2. Control de Personal/PERSONAL 2024  # Cambia esto según la ubicación de tu archivo en producción
 PORT=5000
 DEBUG=False
 SUPABASE_URL=https://omqkgmymtquvyhyuyxqk.supabase.co
